create basis of server

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
-Client/MD/Library
-Client/MD/Logs
-Client/MD/Packages
-Client/MD/ProjectSettings
-Client/MD/Temp
+Client/MD/MD/Library
+Client/MD/MD/Logs
+Client/MD/MD/Packages
+Client/MD/MD/ProjectSettings
+Client/MD/MD/Temp
